--- a/RIK_ESP/data/rik_screen_css.css
+++ b/RIK_ESP/data/rik_screen_css.css
@@ -39,6 +39,7 @@ nav div span{
 	font-size: 1.5em;
 	margin-left: 5%;
 	font-family: 'Time';
+	width: 100%;
 }
 
 /*контейнер с видео и кнопками*/
@@ -56,6 +57,15 @@ nav div span{
 	margin-left:2.5%;	
 }
 
+#setting{
+	font-size:20px;
+	color: white;
+	font-weight: 2px;
+	float: right;
+	margin-right: 2.5%;
+	cursor: pointer;
+	
+}
 	
 .buttonRIK{
 	visibility: hidden;
@@ -125,9 +135,9 @@ nav div span{
 
 
 
-@media(max-width: 1000px){
+@media(max-width: 1050px){
 	header{
-		width: 97.3%;
+		width: 99%;
 		height: 50px;
 		
 	}
@@ -140,19 +150,7 @@ header>span{
 
 }
 
-nav{
-	width: 0px;
-	height: 0px;
-	visibility: hidden;
-	position: absolute
-}
 
-nav > span{
-	width: 0px;
-	height: 0px;
-	font-size: 0px;
-	visibility: hidden;
-}
 
 
 /*контейнер с видео и кнопками*/
@@ -213,8 +211,9 @@ nav > span{
 	height: 100px;
 	padding-left: 20px;
 	border: 2px solid red;	
-	position: relative;
-	bottom: 450px;
+	position: absolute;
+	/*bottom: 450px;*/
+	bottom: 70%;
 	left: 50px;
 	border-radius: 16px;	
 }
@@ -229,24 +228,30 @@ nav > span{
 
 
 #browser_video{
-	height:98%;
+	height:100%;
 
 }
 
 #videoDiv{
+	min-height:400px;
 	height:99%;
 	position: relative;
 }
 
 }
 
-@media(max-height: 295px){
+@media(max-height: 495px){
 	.buttonRIK{
 	visibility: visible;
 	width: 75px;
 	height: 75px;
-	padding-left: 20px;
-	border: 2px solid red;
-	border-radius: 6px;
-	position: absolute;
+	}
+	
+	#lightON {
+		width: 75px;
+		height: 75px;
+		bottom: 70%;
+	}
+	
 }
+
