-испарвлен баг serial порта

--- a/RIK_ESP/data/rik_screen_css.css
+++ b/RIK_ESP/data/rik_screen_css.css
@@ -68,12 +68,18 @@ nav div span{
 }
 	
 .buttonRIK{
+	-moz-user-select: none;
+	-khtml-user-select: none;
+	user-select: none; 
 	visibility: hidden;
 	width: 0px;
 	height: 0px;
 }
 
 #lightON{
+	-moz-user-select: none;
+	-khtml-user-select: none;
+	user-select: none; 
 	visibility: hidden;
 	width: 0px;
 	height: 0px;
